loprometido/Proyecto2P/proye/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Users\Charli\Documents\BlueJ-windows-401\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\bluejcore.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\junit-4.11.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\hamcrest-core-1.3.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\lang-stride.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\userlib\pi4j-core.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\userlib\pi4j-device.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\userlib\pi4j-gpio-extension.jar;C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\userlib\pi4j-service.jar;C:\Users\Charli\Desktop\Proyecto2P\proye
-d
C:\Users\Charli\Desktop\Proyecto2P\proye\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Users\Charli\Documents\BlueJ-windows-401\bluej\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java
<---- end of javadoc command ---->
Loading source file C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java...
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:20: error: <identifier> expected
    t.
      ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: ';' expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
          ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: illegal start of type
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                   ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: <identifier> expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                    ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: ';' expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                       ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: illegal start of type
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                    ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: <identifier> expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                     ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: ';' expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                         ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: illegal start of type
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                                          ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: <identifier> expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                                           ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: ';' expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                                               ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: illegal start of type
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                                                             ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:21: error: <identifier> expected
    public Semaforo(int tiempoDeRojo, int tiempoDeAmarillo, int tiempoDeVerde)
                                                                              ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:22: error: ';' expected
    {
     ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:23: error: illegal start of type
        tR = tiempoDeRojo;
           ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:24: error: <identifier> expected
        tA = tiempoDeAmarillo;
          ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:25: error: <identifier> expected
        tV = tiempoDeVerde;
          ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:30: error: class, interface, or enum expected
    public void prenderSemaforo(){
           ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:35: error: class, interface, or enum expected
    public boolean pasanLosAutos(){
           ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:37: error: class, interface, or enum expected
    }
    ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:38: error: class, interface, or enum expected
    public long  getMillis(){ 
           ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:40: error: class, interface, or enum expected
        milis /= 360000000;
        ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:41: error: class, interface, or enum expected
        return milis;
        ^
C:\Users\Charli\Desktop\Proyecto2P\proye\Semaforo.java:42: error: class, interface, or enum expected
    }
    ^
24 errors
